<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Categories (comma separated)"
        android:fontFamily="@font/regular"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/categoriesInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:hint="Electronics, Books, Clothing"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="Locations/Distance (comma separated)"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/locationsInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/regular"
        android:hint="Halifax, 10 km"/>

</LinearLayout>