<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back"
        android:fontFamily="@font/regular"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Received Exchange Offers"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:fontFamily="@font/regular"
        android:padding="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/receivedOffersRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints" />
</LinearLayout>