...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status: "
            android:textSize="18sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/respondToOfferSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/offer_options"
            android:spinnerMode="dropdown"/>

    </LinearLayout>
...
